# polygon

./: 2.cpp  CMakeLists.txt  datalab2.txt  datalab4.txt  lab2.cpp  lab3.cpp  lab4.cpp  lab6.cpp  lab7.cpp  lab8.cpp  mainM .cpp  sort_algorithms.cpp  sort_algorithms.h
uu.dSYM/: all_3_algorithms.cpp
